--- a/src/PersonManagement.API/PersonManagement.API.csproj
+++ b/src/PersonManagement.API/PersonManagement.API.csproj
@@ -17,6 +17,8 @@
     </PackageReference>
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="AspNetCore.HealthChecks.Sqlite" Version="8.0.1" />
+    <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="8.0.2" />
   </ItemGroup>
 
   <ItemGroup>
