Update .gitignore to include staging appsettings and code analysis results; refactor error handling in command handlers to use Count instead of Any for better clarity; enhance email validation regex performance with GeneratedRegex; adjust default properties in query and logging configuration classes; update test setups to handle null values correctly.

--- a/.gitignore
+++ b/.gitignore
@@ -395,3 +395,8 @@ $RECYCLE.BIN/
 # Application settings with sensitive data
 appsettings.Production.json
 appsettings.Staging.json
+
+# Code analysis results
+*.sarif
+**/CodeAnalysisLog.xml
+**/CodeAnalysisReport.html
